--- a/src/app/beneficios/beneficios.component.html
+++ b/src/app/beneficios/beneficios.component.html
@@ -1,22 +1,26 @@
-<div class=" bg-color">
+<div class=" bg-light">
   <div class="banner">
     <img src="../../assets/img/banner_3.jpg" class="img-fluid" alt="">
   </div>
-  <div class="padding-main">
-    <h1 class="text-center text-dark title-large">Nuestros Beneficios</h1>
-    <div class="row d-flex justify-content-center">
-      <div *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedFenefic" (click)="onSelect(_benef)" class="col-md-3 mx-3 mb-3">
-        <a class="nav-link text-dark" [routerLink]="['/detalle-beneficios',beneficio.id]">
-          <img src="{{beneficio.imagen}}" class="img-fluid d-flex mx-auto" alt="">
-          <h3 class="text-center mt-3">{{beneficio.nombre}}</h3>
-        </a>
-      </div>
+  <div class="padding-main mb-4 px-4">
+    <h1 class="text-center text-dark title-large my-4">Nuestros Beneficios</h1>
+    <div class="row d-flex justify-content-center mb-5">
+        <div class="col-md-3 d-flex flex-column " *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedFenefic" (click)="onSelect(_benef)">
+            <div class=" d-flex ">
+              <img src="{{beneficio.imagen}}" class="img-fluid align-self-start mx-auto" alt="">
+            </div>
+            <div class="d-flex mt-4">
+              <button type="button" class="btn btn-dark btn-block btn-custom rounded-0 text-white ">{{beneficio.nombre | uppercase}}</button>
+            </div>
+          </div>
     </div>
   </div>
-  <div class="text-banner">
-    <h1 class="text-center text-white m-0">SEA DISTRIBUIDOR</h1>
+  <div class="text-banner mt-4 d-flex justify-content-center">
+    <a routerLink="/detalle-beneficios" class="d-flex align-self-center">
+      <h1 class="text-white m-0">SEA DISTRIBUIDOR</h1>
+  </a>
   </div>
-  <div class="banner">
+  <div>
     <img src="../../assets/img/banner_4.jpg" class="img-fluid" alt="">
   </div>
 
