--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,14 +1,13 @@
-<div class=" bg-color">
+<div class=" bg-light">
     <div class="banner">
       <img src="../../assets/img/banner_6.jpg" class="img-fluid" alt="">
     </div>
     <div class="padding-main">
-      <h1 class="text-center text-white title-large">{{prodSelected.nombre}}</h1>
+      <h1 class="text-center text-dark title-large">Envíenos su consulta</h1>
       <div class="row d-flex">
         <!-- formulario -->
-        <div class="col-md-8 ">
-            <form action="" class="col-md-8 p-3 ml-auto bg-white formulario">
-              <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
+        <div class="col-md-8 mx-auto">
+            <form action="" class="p-3 mx-auto bg-white formulario">
               <div class="form-group">
                 <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
                   aria-required="true">
