--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <img src="././assets/img/logo_w.png" class="img-fluid w-50" alt="">
   </a>
 
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <button class="navbar-toggler ml-auto navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,7 +15,7 @@
         <a class="nav-link mx-auto" routerLink="/home">Home</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link mx-auto" href="#productos">Productos</a>
+        <a class="nav-link mx-auto" routerLink="/productos">Productos</a>
       </li>
       <li class="nav-item d-flex">
         <a class="nav-link  mx-auto" routerLink="/beneficios">Beneficios</a>
