--- a/src/app/como-llegar/como-llegar.component.html
+++ b/src/app/como-llegar/como-llegar.component.html
@@ -1,19 +1,22 @@
-<div class=" bg-color">
+<div class=" bg-light">
   <div class="banner">
     <img src="../../assets/img/banner_2.jpg" class="img-fluid" alt="">
   </div>
   <div class="padding-main">
-    <h1 class="text-center text-dark title-large">¿Dónde estamos?</h1>
-    <div class="row d-flex">
+      <h1 class="h1 font-weight-bold text-center my-3 text-dark mb-3">¿Dónde Estamos?</h1>
+    <div class="row ">
       <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD09zQ9PNDNNy9TadMuzRV_UsPUoWKntt8&amp;q=-31.355041%2C+-63.964014"
-          style="border:0;width:100%;height:600px"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3407.1427058904123!2d-63.964014!3d-31.355041!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDIxJzE4LjIiUyA2M8KwNTcnNTAuNSJX!5e0!3m2!1ses-419!2sus!4v1520456648049" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
-      <p class="text-lead">© Abacor - Industria Argentina Ruta 19 – Km 316 – Monte Cristo Córdoba – CP 5125 0351 432-1664 - 0351 438-3640
-      </p>
+      <div class="col-md-6">
+          <p class="p-3">
+            © Abacor <br> Industria Argentina Ruta 19 <br> Km 316 – Monte Cristo Córdoba <br> CP 5125 <br> 0351 432-1664 - 0351 438-3640
+          </p>
+      </div>
+     
     </div>
   </div>
-  <div class="banner">
+  <div>
     <img src="../../assets/img/banner_2.jpg" class="img-fluid" alt="">
   </div>
 </div>
