--- a/src/app/detalle-beneficios/detalle-beneficios.component.css
+++ b/src/app/detalle-beneficios/detalle-beneficios.component.css
@@ -1,8 +1,8 @@
 .padding-main{
-    padding: 150px 0;
+    padding: 0px 0;
+    margin-top:80px;
 }
 .title-large{
     font-size: 50px;
     line-height: 1.2;
-    font-weight: 700;
 }
