--- a/src/app/detalle-beneficios/detalle-beneficios.component.html
+++ b/src/app/detalle-beneficios/detalle-beneficios.component.html
@@ -1,20 +1,79 @@
-<div class="bg-warning padding-main">
-    <h1 class="text-center text-white title-large">{{benefSelected.nombre}}</h1>
-    <div class="">
-      <div class="row d-flex">
-        <div class="col-md-6">
-         <div class="row">
-        <div class="">
-          <p class="text-white p-3 d-flex mx-auto">{{benefSelected.detalle}}</p>
-        </div>
-        <div class=" d-flex ml-auto img-producto">
-          <img src="{{benefSelected.imagen}}" class="img-fluid mx-auto h-100" alt="">
-        </div>
-      </div>
-      </div>
+<div class="bg-light padding-main">
+  <div class="banner">
+    <img src="../../assets/img/banner_8.jpg" class="img-fluid" alt="">
+  </div>
+  <div class="row d-flex">
+    <div class="col-md-6 mx-auto">
+      <h1 class="text-center my-4 text-dark title-large">Hágase en distribuidor</h1>
+      <div class="row">
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">Email</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword4">País</label>
+              <input type="text" class="form-control" id="pais">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="nombre">Nombre</label>
+              <input type="text" class="form-control" id="nombre">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword4">Teléfono</label>
+              <input type="text" class="form-control" id="telefono">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="Apellido">Apellido</label>
+              <input type="text" class="form-control" id="apellido">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="profesion">Profesión</label>
+              <input type="text" class="form-control" id="profesion">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="direccion">Dirección</label>
+              <input type="text" class="form-control" id="direccion">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="fechNac">Fecha de nacimiento</label>
+              <input type="text" class="form-control" id="fechNac">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="codPost">Código postal</label>
+              <input type="text" class="form-control" id="codPost">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="codPost">Ditribuidor habitual</label>
+              <input type="text" class="form-control" id="codPost">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="ciudad">Ciudad</label>
+              <input type="text" class="form-control" id="ciudad">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="cuando">Cuando comenzaste a ser instalador?</label>
+              <input type="text" class="form-control" id="cuando">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="prov">Provincia</label>
+              <input type="text" class="form-control" id="prov">
+            </div>
+            <div class="form-group col-md-6 d-flex">
+                <button type="submit" class="btn btn-warning align-self-end mx-auto">SUSCRIBITE</button>
+              </div>
+          </div>
+         
+         
+         
+       
+          
+        </form>
+
       </div>
     </div>
-    <button type="button" class="btn btn-info mx-auto">
-      <a class="nav-link text-white" [routerLink]="['/beneficios']">Volver</a>
-    </button>
   </div>
+
+
+</div>
