--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,9 +1,10 @@
 
-/* nav{
-    background-color: rgba(0, 0, 0, 0.1) !important;
+nav{
+    /* background-color: rgba(0, 0, 0, 0.1) !important; */
+    background-color:#2d3345!important;
     min-height: 80px;
     
-} */
+}
 nav .navbar-nav li{
     font-size: 1.03rem;
     border:1px solid transparent!important;
@@ -37,11 +38,6 @@ position: absolute;
  top: 2%;
 left: 2%;
 }
-
-
-
-
-
 @media screen and (max-width:425px) {
     #navbarSupportedContent ul li,div {
         background-color: #2d3345;
