--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-navbar [isScrolled] = isScrolled [ngClass]= "{'page-scroll-nav': isScrolled}"></app-navbar>
-<div class="wrapper">
-    <router-outlet></router-outlet>
-</div>
+
+<app-navbar ></app-navbar>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
