--- a/src/app/detalle-beneficios/detalle-beneficios.component.html
+++ b/src/app/detalle-beneficios/detalle-beneficios.component.html
@@ -1,10 +1,10 @@
 <div class="bg-light padding-main">
-  <div class="banner">
+  <div>
     <img src="../../assets/img/banner_8.jpg" class="img-fluid" alt="">
   </div>
   <div class="row d-flex">
     <div class="col-md-6 mx-auto">
-      <h1 class="text-center my-4 text-dark title-large">Hágase en distribuidor</h1>
+      <h1 class="text-center my-4 text-dark title-large">Hágase distribuidor</h1>
       <div class="row">
         <form>
           <div class="form-row">
