--- a/src/app/detalle-productos/detalle-productos.component.html
+++ b/src/app/detalle-productos/detalle-productos.component.html
@@ -1,33 +1,37 @@
 <div class=" bg-light">
   <div class="banner">
-    <img src="../../assets/img/banner_7.jpg" class="img-fluid" alt="">
+    <img src="../../assets/img/living.png" class="img-fluid" alt="">
   </div>
-  <div class="padding-main">
-    <div class="row d-flex">
-      <div class="col-md-6 mx-auto">
-        <h1 class="text-center text-dark title-large">{{prodSelected.nombre}}</h1>
+  <hr>
+  <div class="py-4 px-3">
+    <div class="row d-flex ">
+      <!-- parte izq. -->
+      <div class="col-md-6 mx-auto mt-3 text-grey">
+        <h1 class="text-center title-large">{{prodSelected.nombre}}</h1>
         <div class="row">
-          <p class="text-dark p-3 mx-auto mb-4 w-100 title-small">{{prodSelected.detalle}}</p>
-          <div class="d-flex mx-auto img-detalle">
-            <img src="{{prodSelected.imagenDet}}" class="img-fluid mx-auto " alt="">
-          </div>
+          <p class="mx-auto my-4 title-small">{{prodSelected.detalle}}</p>
+            <h4 class="w-100 mb-4">Propiedades</h4>
+            
+            <ul class="icon-list list-group flex-row">
+              <li class="list-group-item"><i class="fa fa-cubes fa-5x"></i></li>
+              <li class="list-group-item"><i class="fa fa-tint fa-5x"></i></li>
+              <li class="list-group-item"><i class="fa fa-home fa-5x"></i></li>
+            </ul>
         </div>
       </div>
-
-      <div class="col-md-6 d-flex flex-column">
-        <div class="bg-cyan d-flex ">
+      <!-- parte der. -->
+      <div class="col-md-5 d-flex flex-column bg-white">
+        <div class="d-flex ">
           <img src="{{prodSelected.imagen}}" class="img-fluid align-self-start mx-auto" alt="">
         </div>
-        <div class="bg-warning d-flex">
-          <button type="button" class="btn btn-block btn-custom rounded-0 text-white">VER FICHA TÉCNICA</button>
+        <div class="bg-warning d-flex mt-3">
+          <button type="button" class="btn btn-block btn-lg btn-custom rounded-0 text-dark">VER FICHA TÉCNICA</button>
         </div>
       </div>
     </div>
-    <button type="button" class="btn btn-sm btn-dark my-5 mx-auto">
-      <a class="nav-link text-white" routerLink="/productos">Volver a productos</a>
-    </button>
+    <button type="button" class="btn btn-sm btn-dark m-5">
+    <a class="btn text-white" routerLink="/productos">&lt; Volver a productos</a>
+  </button>
   </div>
-  <div class="banner">
-    <img src="../../assets/img/banner.jpg" class="img-fluid" alt="">
-  </div>
+  
 </div>
