--- a/src/app/como-llegar/como-llegar.component.html
+++ b/src/app/como-llegar/como-llegar.component.html
@@ -1,22 +1,17 @@
-<div class=" bg-light">
-  <div class="banner">
-    <img src="../../assets/img/banner_2.jpg" class="img-fluid" alt="">
-  </div>
-  <div class="padding-main">
-      <h1 class="h1 font-weight-bold text-center my-3 text-dark mb-3">¿Dónde Estamos?</h1>
-    <div class="row ">
+<div class="bg-light">
+  <div class="w-100">
+    <img src="../../assets/img/banner.jpg" class="img-fluid" alt="">
+  </div> 
+  <h1 class="h1 text-center my-4 text-dark mb-3">¿Dónde Estamos?</h1>
+  <div class="row p-0 mx-0 mb-5">
       <div class="col-md-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3407.1427058904123!2d-63.964014!3d-31.355041!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDIxJzE4LjIiUyA2M8KwNTcnNTAuNSJX!5e0!3m2!1ses-419!2sus!4v1520456648049" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="d-block mx-auto" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3407.1427058904123!2d-63.964014!3d-31.355041!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDIxJzE4LjIiUyA2M8KwNTcnNTAuNSJX!5e0!3m2!1ses-419!2sus!4v1520456648049" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
-      <div class="col-md-6">
-          <p class="p-3">
+      <div class="col-md-6 texto-info">
+          <p class="p-2 ml-md-4 ml-lg-0">
             © Abacor <br> Industria Argentina Ruta 19 <br> Km 316 – Monte Cristo Córdoba <br> CP 5125 <br> 0351 432-1664 - 0351 438-3640
           </p>
       </div>
-     
-    </div>
-  </div>
-  <div>
-    <img src="../../assets/img/banner_2.jpg" class="img-fluid" alt="">
+  
   </div>
 </div>
