--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,9 +1,10 @@
 <div class=" bg-light">
-    <div class="banner">
-      <img src="../../assets/img/banner_6.jpg" class="img-fluid" alt="">
+    <div class="w-100">
+      <img src="../../assets/img/living.png" class="img-fluid" alt="">
     </div>
-    <div class="padding-main">
-      <h1 class="text-center text-dark title-large">Envíenos su consulta</h1>
+    <hr>
+    <div>
+      <h1 class="text-center text-dark title-large">Envíenos Su Consulta</h1>
       <div class="row d-flex">
         <!-- formulario -->
         <div class="col-md-8 mx-auto">
@@ -39,7 +40,5 @@
       </div>
      
     </div>
-    <div class="banner">
-      <img src="../../assets/img/banner_5.jpg" class="img-fluid" alt="">
-    </div>
+    
   </div>
