--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,12 @@
 
 footer{
-    background-color:#2d3345;
+    /* background-color:#2d3345; */
+    background-color:#ffde00;
     padding:30px;
     font-family: "Open Sans",sans-serif;
-    color:rgba(255, 255, 255, 0.712)!important;
+}
+.nav-link{
+    color:#343a40!important;
 }
 footer img{
     width: 30%!important;
@@ -11,21 +14,22 @@ footer img{
 .sq{
     width: 32px;
     height: 32px;
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: all .2s ease-in-out;
+    background-color: #fff;
+    transition: all .15s ease-in-out;
 }
 
 .sq:hover{
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.637);
 }
 
 .sq:hover >  a {
-    color: #2d3345!important;
+    color: #ffde00!important;
 }
 
 .input-group span{
     border-radius: 0 5px 5px 0;
-    background-color: rgba(255, 255, 255, 0.219);
+    background-color: rgb(145, 145, 145);
+   
 }
 .title-mini{
     font-size: 18px;
