--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="text-dark">
   <div class="row d-flex text-center">
     <div class="col-md-4">
       <img src="././assets/img/logo_w.png" class="mx-auto img-fluid" alt="">
@@ -8,16 +8,16 @@
     <div class="col-md-3 ">
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Active</a>
+              <a class="nav-link" href="#">Active</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Link</a>
+              <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Link</a>
+              <a class="nav-link " href="#">Link</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Link</a>
+              <a class="nav-link " href="#">Link</a>
             </li>
           </ul>
     </div>
@@ -34,17 +34,17 @@
       
       <div class="social-media mt-4 d-flex justify-content-center justify-content-sm-start">
         <div class="sq bg-d d-flex mr-2">
-          <a href="#" target="_blank" class="text-white mx-auto align-self-center">
+          <a href="#" target="_blank" class="text-dark mx-auto align-self-center">
             <i class="fa fa-facebook"></i>
           </a>
         </div>
         <div class="sq d-flex mr-2">
-          <a href="#" target="_blank" class="text-white mx-auto align-self-center">
+          <a href="#" target="_blank" class="text-dark mx-auto align-self-center">
             <i class="fa fa-google"></i>
           </a>
         </div>
         <div class="sq d-flex mr-2">
-          <a href="#" target="_blank" class="text-white mx-auto align-self-center">
+          <a href="#" target="_blank" class="text-dark mx-auto align-self-center">
             <i class="fa fa-instagram"></i>
           </a>
         </div>
