--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,39 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top p-0" [ngClass]= "{'navbar-scroll-bg': isScrolled}">
-  <div class="container">
+<nav class="navbar navbar-expand-md navbar-light text-uppercase sticky-top p-0">
+  <div class="container ">
   <a class="navbar-brand ml-3 mb-1 logo" href="#">
     <img src="././assets/img/logo_w.png" class="img-fluid w-50" alt="">
   </a>
 
-  <button class="navbar-toggler ml-auto navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <button class="navbar-toggler ml-auto navbar-toggler-right mr-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse p-0" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto p-0">
+  <div class="collapse navbar-collapse p-0 float-md-righ" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto p-0 t ">
       <li class="nav-item d-flex bd-dark">
-        <a class="nav-link mx-auto" routerLink="/home">Home</a>
+        <a class="nav-link text-dark mx-auto" routerLink="/home">Home</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link mx-auto" routerLink="/productos">Productos</a>
+        <a class="nav-link text-dark mx-auto" routerLink="/productos">Productos</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link  mx-auto" routerLink="/beneficios">Beneficios</a>
+        <a class="nav-link text-dark mx-auto" routerLink="/beneficios">Beneficios</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link mx-auto" routerLink="/como-llegar">Cómo llegar</a>
+        <a class="nav-link text-dark mx-auto" routerLink="/como-llegar">Cómo llegar</a>
       </li>
       <li class="nav-item d-flex mr-2">
-          <a class="nav-link mx-auto" routerLink="/contacto">Contacto</a>
+          <a class="nav-link text-dark mx-auto" routerLink="/contacto">Contacto</a>
         </li>
+        <li class="nav-item d-flex ">
+            <span class="nav-link text-dark box-phone mx-auto"><i class="fa fa-phone"></i>&nbsp;0123 456 789</span>
+          </li>
     </ul>
-    <div class="nav-item px-4 border-left d-flex">
-      <span class="text-white box-phone mx-auto"><i class="fa fa-phone"></i>&nbsp;0123 456 789</span>
-    </div>
-  
- 
+   
   </div>
 
 </div>
 </nav>
+
 
