--- a/src/styles.css
+++ b/src/styles.css
@@ -1,29 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
-@import url('https://fonts.googleapis.com/css?family=PT+Sans');
-/* 
-.navbar{
-    background-color: rgba(0, 0, 0, 0.123);
-    height: 80px;
-    transition: all .2s ease-out;
-    
-}
-.navbar button{
-  
-    transition: all .2s ease-out;
-    
-}
+@import url('https://fonts.googleapis.com/css?family=Oxygen:700');
+body{
+    font-family: 'Oxygen', sans-serif;
 
-.logo img{
-    width:45%;
-    transition: all .2s ease-out;
-  }
-
-.page-scroll-nav .navbar {
-    background-color: #2d3345;
-    height: 50px;
-    
-} */
+}
 
 
 
