maquetado y estilado final jueves

--- a/src/app/beneficios/beneficios.component.css
+++ b/src/app/beneficios/beneficios.component.css
@@ -29,7 +29,9 @@
     background-color: #565458; 
     min-height: 60px;
 }
-
+.btn-color{
+    background-color: #659b01;
+}
 
 @media screen and (max-width:768px) {
     .beneficios button{
