--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,14 +1,14 @@
 <div class=" bg-light">
-    <div class="w-100">
-      <img src="../../assets/img/living.png" class="img-fluid" alt="">
-    </div>
-    <hr>
-    <div>
-      <h1 class="text-center text-dark title-large">Envíenos Su Consulta</h1>
-      <div class="row d-flex">
-        <!-- formulario -->
-        <div class="col-md-8 mx-auto">
+   <div>
+    <h1 class="text-center text-dark my-4 title-large">Envíenos Su Consulta</h1>
+    <div class="row d-flex">
+      <div class="col-lg-10 mx-auto">
+        <div class="row">
+
+          <!-- formulario -->
+          <div class="col-md-6">
             <form action="" class="p-3 mx-auto bg-white formulario">
+              <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
               <div class="form-group">
                 <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
                   aria-required="true">
@@ -23,7 +23,7 @@
               </div>
               <div class="form-group">
                 <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
-                  placeholder="Mensaje" cols="30" rows="10" aria-required="true"></textarea>
+                  placeholder="Mensaje" aria-required="true"></textarea>
               </div>
               <button type="submit" class="d-flex btn solid btn-block block text-white">
                 <div class="mx-auto">
@@ -31,14 +31,19 @@
                   <span class="d-inline-flex" style="">ENVIAR</span>
                 </div>
               </button>
-
             </form>
           </div>
           <!--/ formulario -->
-  
-        
+          <div class="col-md-6 text-dark  consulta-leyenda">
+            
+            <p class="title-mini ml-lg-3">Por favor deje su consulta <br>
+              y le responderemos a la brevedad.</p>
+          </div>
+
+        </div>
       </div>
-     
     </div>
-    
+
   </div>
+
+</div>
