--- a/src/app/detalle-productos/detalle-productos.component.html
+++ b/src/app/detalle-productos/detalle-productos.component.html
@@ -1,8 +1,5 @@
 <div class=" bg-light">
-  <div class="banner">
-    <img src="../../assets/img/living.png" class="img-fluid" alt="">
-  </div>
-  <hr>
+ 
   <div class="py-4 px-3">
     <div class="row d-flex ">
       <!-- parte izq. -->
@@ -25,7 +22,7 @@
           <img src="{{prodSelected.imagen}}" class="img-fluid align-self-start mx-auto" alt="">
         </div>
         <div class="bg-warning d-flex mt-3">
-          <button type="button" class="btn btn-block btn-lg btn-custom rounded-0 text-dark">VER FICHA TÉCNICA</button>
+          <button type="button" class="btn btn-block btn-lg btn-custom rounded-0 text-white">VER FICHA TÉCNICA</button>
         </div>
       </div>
     </div>
