--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 
 nav{
-    background: linear-gradient(135deg, #ffde00 0%,hsla(186, 90%, 39%, 1) 20%,#ffde00 20%,#ffde00 99%);
+    background: linear-gradient(135deg, #659b01 0%,hsla(186, 90%, 39%, 1) 20%,#659b01 20%,#659b01 99%);
     min-height: 80px;
 }
 nav .navbar-nav li{
