--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,22 +12,22 @@
   <div class="collapse navbar-collapse p-0 float-md-righ" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto p-0 t ">
       <li class="nav-item d-flex bd-dark">
-        <a class="nav-link text-dark mx-auto" routerLink="/home">Home</a>
+        <a class="nav-link text-white mx-auto" routerLink="/home">Home</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link text-dark mx-auto" routerLink="/productos">Productos</a>
+        <a class="nav-link text-white mx-auto" routerLink="/productos">Productos</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link text-dark mx-auto" routerLink="/beneficios">Beneficios</a>
+        <a class="nav-link text-white mx-auto" routerLink="/beneficios">Beneficios</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link text-dark mx-auto" routerLink="/como-llegar">Cómo llegar</a>
+        <a class="nav-link text-white mx-auto" routerLink="/como-llegar">Cómo llegar</a>
       </li>
       <li class="nav-item d-flex mr-2">
-          <a class="nav-link text-dark mx-auto" routerLink="/contacto">Contacto</a>
+          <a class="nav-link text-white mx-auto" routerLink="/contacto">Contacto</a>
         </li>
         <li class="nav-item d-flex ">
-            <span class="nav-link text-dark box-phone mx-auto"><i class="fa fa-phone"></i>&nbsp;0123 456 789</span>
+            <span class="nav-link text-white box-phone mx-auto"><i class="fa fa-phone"></i>&nbsp;011 4844-0128</span>
           </li>
     </ul>
    
