--- a/src/app/beneficios/beneficios.component.html
+++ b/src/app/beneficios/beneficios.component.html
@@ -8,20 +8,20 @@
     </div>
 
     <div class="row p-0 mx-0 d-flex justify-content-center mb-5 beneficios">
-      <div class="col-md-3 d-flex flex-column" *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedFenefic"
+      <div class="col-md-3 d-flex flex-column" *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedBenefic"
         (click)="onSelect(_benef)">
         <div class=" d-flex ">
           <img src="{{beneficio.imagen}}" class="img-fluid align-self-start mx-auto" alt="">
         </div>
         <div class="d-flex h-25">
-          <button type="button" class="btn btn-warning btn-block btn-custom rounded-0 text-white ">{{beneficio.nombre | uppercase}}</button>
+          <button type="button" class="btn btn-color text-white btn-block btn-custom rounded-0 text-white ">{{beneficio.nombre | uppercase}}</button>
         </div>
       </div>
     </div>
   </div>
 
   <div class="w-100 mt-4 d-flex bg-cartel justify-content-center">
-    <a routerLink="/detalle-beneficios" class="d-flex align-self-center">
+    <a routerLink="/hag-dist" class="d-flex align-self-center">
       <h1 class="text-white m-0">SEA DISTRIBUIDOR</h1>
     </a>
   </div>
