--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,37 +1,54 @@
-<footer class="text-dark">
+<footer class="text-white">
   <div class="row d-flex text-center">
     <div class="col-md-4">
       <img src="././assets/img/logo_w.png" class="mx-auto img-fluid" alt="">
-      <h3 class="my-3">lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet</p>
+      <p class="mt-3 text-xl-left">Dirección: La Crujía 5767, San Martin, Buenos Aires
+        <br>Horario: Cerrado ⋅ Horario de apertura: vie. 08 Teléfono: 011 4844-0128
+        <br> Provincia: Provincia de Buenos Aires
+      </p>
+
     </div>
     <div class="col-md-3 ">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Link</a>
-            </li>
-          </ul>
+      <p>Productos</p>
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Albamix Impermeable</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Albamix Premium</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Membrana Cementícia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Albaplack Multifunción</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Revoque fino al yeso</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Stucko Abacor</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="#">Pastina Impermeable</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mortero Base Coat</a>
+        </li>
+
+      </ul>
     </div>
 
     <div class="col-md-5 ">
-      <h3 class="mb-3 text-center text-sm-left title-mini">Sign up to get news</h3>
-      
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
-          <span class="input-group-addon my-auto p-2" id="basic-addon2">
-            <i class="fa fa-envelope-o fa-lg text-white"></i>
-          </span>
-        </div>
-      
+      <h3 class="mb-3 text-center text-sm-left title-mini">Suscríbase para recibir nuestro boletín</h3>
+
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Email" aria-describedby="basic-addon2">
+        <span class="input-group-addon my-auto p-2" id="basic-addon2">
+          <i class="fa fa-envelope-o fa-lg text-white"></i>
+        </span>
+      </div>
+
       <div class="social-media mt-4 d-flex justify-content-center justify-content-sm-start">
         <div class="sq bg-d d-flex mr-2">
           <a href="#" target="_blank" class="text-dark mx-auto align-self-center">
