--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,68 +1,63 @@
 <section class="main py-4 px-3">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row ">
       <div class="col-lg-10 mx-auto">
         <div class="row">
           <div class="col-md-6 text-white">
-            <div class="content typo-light">
-              <h1 class="title-large mb-3" data-rgen-sm="medium">Build your dream home with trusted service</h1>
-              <p class="title-mini">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt</p>
-              <hr class="hr my-3">
-              <p class="italic bold-3 fs30 lh-3" data-rgen-sm="fs20">Construction projects
-                <br>now made quick and easy</p>
+            <h1 class="title-large mb-3">Premezclados mentícios premium</h1>
+            <p class="title-mini">Distribuimos productos de primer calidad para construcción en seco y en construcción.</p>
             </div>
-          </div>
-
-          <!-- formulario -->
-          <div class="col-md-6">
-            <form action="" class="p-3 ml-auto mt-3 bg-white formulario">
-              <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
-
-              <div class="form-group">
-                <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
-                  aria-required="true">
-              </div>
-              <div class="form-group">
-                <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Email"
-                  aria-required="true">
-              </div>
-              <div class="form-group">
-                <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Teléfono"
-                  aria-required="true">
-              </div>
-              <div class="form-group">
-                <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
-                  placeholder="Mensaje" cols="30" rows="10" aria-required="true"></textarea>
-              </div>
-              <button type="submit" class="d-flex btn solid btn-block block text-white">
-                <div class="mx-auto">
-                  <i class="fa fa-envelope-o fa-lg text-white mr-2 align-items-center"></i>
-                  <span class="d-inline-flex" style="">ENVIAR</span>
+            <!-- formulario -->
+            <div class="col-md-6">
+              <form action="" class="p-3 mx-auto mt-3 bg-white formulario">
+                <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
+                <div class="form-group">
+                  <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
+                    aria-required="true">
                 </div>
-              </button>
+                <div class="form-group">
+                  <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Email"
+                    aria-required="true">
+                </div>
+                <div class="form-group">
+                  <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Teléfono"
+                    aria-required="true">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
+                    placeholder="Mensaje" aria-required="true"></textarea>
+                </div>
+                <button type="submit" class="d-flex btn solid btn-block block text-white">
+                  <div class="mx-auto">
+                    <i class="fa fa-envelope-o fa-lg text-white mr-2 align-items-center"></i>
+                    <span class="d-inline-flex" style="">ENVIAR</span>
+                  </div>
+                </button>
 
-            </form>
+              </form>
+            </div>
+            <!--/ formulario -->
+
           </div>
-          <!--/ formulario -->
+        </div>
+      </div>
+      <!--/ row-->
 
+  </div>
+    <!--/ container-fluid-->
+</section>
+<!--/ section home-->
+<section id="productos ">
+    <h1 class="h1 font-weight-bold text-center text-dark mb-3">Nuestros productos</h1>
+    <div class="container-fluid">
+      <div class="row p-0 d-flex justify-content-center">
+        <div id="producto" *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="col-md-2 d-flex justify-items-center bg-white mx-3 mb-3 px-4">
+          <a class="btn btn-block" [routerLink]="['/detalle-productos',producto.id]">
+            <img src="{{producto.imagen}}" class="img-fluid mx-auto" alt="">
+            <p class="mx-auto text-center text-dark title-name mt-3">{{producto.nombre}}</p>
+              <button class="btn btn-color btn-block rounded-0 text-white mt-4 mx-auto butt-prod px-md-2">Ver producto</button>
+          </a>
         </div>
       </div>
     </div>
-    <!--/ row-->
-  </div>
-  <!--/ container-fluid-->
-</section>
-<!--/ section home-->
-<section id="productos">
-  <div class="container">
-    <h1 class="h1 text-center mb-3">Nuestros productos</h1>
-    <div class="row d-flex justify-content-center">
-      <div *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="col-sm-4 col-lg-2  mx-3 mb-3">
-        <a class="nav-link" [routerLink]="['/detalle-productos',producto.id]" >
-          <img src="{{producto.imagen}}" class="img-fluid d-flex mx-auto" alt="">
-        <h3 class="text-center mt-3">{{producto.nombre}}</h3>
-      </a>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
