--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,24 +1,24 @@
 <div class=" bg-color">
-  <div class="w-100">
-    <img src="../../assets/img/banner.jpg" class="img-fluid" alt="">
-  </div>
-  <hr>
+  <!-- <div class="w-100 img-fondo">
+   
+  </div> -->
+  <!-- <hr> -->
   <div class="padding-main py-4 px-3">
     <div class="row d-flex">
-      <section id="productos ">
-        <h1 class="h1 font-weight-bold text-center text-dark mb-3">Nuestros productos</h1>
-        <div class="container-fluid">
-          <div class="row p-0 d-flex justify-content-center">
-            <div *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="col-md-2 d-flex justify-items-center bg-white mx-3 mb-3 p-0">
-              <a class="nav-link btn btn-block p-0" [routerLink]="['/detalle-productos',producto.id]">
-                <img src="{{producto.imagen}}" class="img-fluid mx-auto" alt="">
-                <h4 class="mx-auto text-center text-dark title-name font-weight-bold mt-3">{{producto.nombre}}</h4>
-                  <button class="btn btn-warning btn-block rounded-0 mt-4 mx-auto">Ver producto</button>
-              </a>
+        <section id="productos ">
+            <h1 class="h1 font-weight-bold text-center text-dark mb-3">Nuestros productos</h1>
+            <div class="container-fluid">
+              <div class="row p-0 d-flex justify-content-center">
+                <div id="producto" *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="col-md-2 d-flex justify-items-center bg-white mx-3 mb-3 px-4">
+                  <a class="btn btn-block" [routerLink]="['/detalle-productos',producto.id]">
+                    <img src="{{producto.imagen}}" class="img-fluid mx-auto" alt="">
+                    <p class="mx-auto text-center text-dark title-name mt-3">{{producto.nombre}}</p>
+                      <button class="btn btn-color text-white btn-block rounded-0 mt-4 mx-auto butt-prod px-md-2">Ver producto</button>
+                  </a>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </section>
+          </section>
       <div class="col-md-6 d-flex">
         <div class="mx-auto d-flex">
           <img src="{{prodSelected.imagen}}" class="img-fluid align-self-end " alt="">
