--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             </div>
             <!-- formulario -->
             <div class="col-md-6">
-              <form action="" class="p-3 mx-auto mt-3 bg-white formulario">
+              <form action="" class="p-3 mx-auto bg-white formulario">
                 <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
                 <div class="form-group">
                   <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
@@ -27,7 +27,7 @@
                   <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
                     placeholder="Mensaje" aria-required="true"></textarea>
                 </div>
-                <button type="submit" class="d-flex btn solid btn-block block text-white">
+                <button type="submit" class="d-flex btn solid btn-block btn-color block text-white">
                   <div class="mx-auto">
                     <i class="fa fa-envelope-o fa-lg text-white mr-2 align-items-center"></i>
                     <span class="d-inline-flex" style="">ENVIAR</span>
