--- a/src/app/beneficios/beneficios.component.html
+++ b/src/app/beneficios/beneficios.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!totodos;else other_content">
 <div class="row p-0 mx-0">
   <div class="mb-4 px-5">
     <div class="w-100 banda-sup">
@@ -9,12 +10,12 @@
 
     <div class="row p-0 mx-0 d-flex justify-content-center mb-5 beneficios">
       <div class="col-md-3 d-flex flex-column" *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedBenefic"
-        (click)="onSelect(_benef)">
+        >
         <div class=" d-flex ">
           <img src="{{beneficio.imagen}}" class="img-fluid align-self-start mx-auto" alt="">
         </div>
         <div class="d-flex h-25">
-          <button type="button" class="btn btn-color text-white btn-block btn-custom rounded-0 text-white ">{{beneficio.nombre | uppercase}}</button>
+          <button type="button" class="btn btn-color text-white btn-block btn-custom rounded-0 text-white " routerLink="/beneficio/{{beneficio.id}}">{{beneficio.nombre | uppercase}}</button>
         </div>
       </div>
     </div>
@@ -23,7 +24,42 @@
   <div class="w-100 mt-4 d-flex bg-cartel justify-content-center">
     <a routerLink="/hag-dist" class="d-flex align-self-center">
       <h1 class="text-white m-0">SEA DISTRIBUIDOR</h1>
+      
     </a>
   </div>
 </div>
+</div>
+<ng-template #other_content>
+<div class="row p-0 mx-0">
+    <div class="mb-4 px-5">
+      <div class="w-100 banda-sup">
+        <h1 class="text-center text-dark title-large my-4">Nuestros Beneficios</h1>
+        <h5 class="text-dark my-4"><em> Lorem ipsum dolor sit, amet consectetur adipisicing elit.</em></h5>
+        <p class="w-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia reprehenderit cum nostrum labore ad ipsum facere
+          maiores unde. Voluptatibus ab deserunt inventore blanditiis placeat pariatur facere vel deleniti consectetur dicta.</p>
+      </div>
   
+      <div class="row p-0 mx-0 d-flex justify-content-center mb-5 beneficios">
+        <div class="col-md-3 d-flex flex-column">
+          <div class=" d-flex ">
+            <img src="{{totodos.imagen}}" class="img-fluid align-self-start mx-auto" alt="">
+          </div>
+          <div class="d-flex h-25">
+            <a [class.selected]="beneficio === benefSelected"
+            git >
+            <button type="button" class="btn btn-color text-white btn-block btn-custom rounded-0 text-white ">{{beneficio.nombre | uppercase}}</button>
+          </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="w-100 mt-4 d-flex bg-cartel justify-content-center">
+      <a routerLink="/detalle-beneficios" class="d-flex align-self-center">
+        <h1 class="text-white m-0">SEA DISTRIBUIDOR</h1>
+      </a>
+    </div>
+  </div>
+</ng-template>
+
+
