--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
 
     </div>
     <div class="col-md-3 ">
-      <p>Productos</p>
+      <!-- <p>Productos</p>
       <ul class="nav flex-column">
         <li class="nav-item">
           <a class="nav-link" href="#">Albamix Impermeable</a>
@@ -36,7 +36,7 @@
           <a class="nav-link" href="#">Mortero Base Coat</a>
         </li>
 
-      </ul>
+      </ul> -->
     </div>
 
     <div class="col-md-5 ">
